<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.FeedBackFragment">

    <TextView
        android:id="@+id/tvRateYourExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:textSize="28sp"
        android:text="@string/rate_your_experience"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/gable_green"/>

    <TextView
        android:id="@+id/tvUserExperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/are_you_satisfied_with_the_service"
        android:fontFamily="@font/quicksand"
        app:layout_constraintTop_toBottomOf="@id/tvRateYourExperience"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <RatingBar
        android:id="@+id/rbFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/gable_green"
        android:stepSize="1"
        android:backgroundTint="@color/gable_green"
        app:layout_constraintTop_toBottomOf="@id/tvUserExperience"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/rbFeedback"
        android:background="@color/gable_green"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvImprove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_what_we_can_improved"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/gable_green"
        android:textSize="21sp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/etFeedback"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:hint="@string/your_experience"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="start|top"
        app:layout_constraintTop_toBottomOf="@id/tvImprove"
        android:background="@drawable/bg_searchview"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@id/btnFeedback" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etFeedback"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/gable_green"
        android:text="@string/send"
        android:textAllCaps="false"
        android:enabled="false"
        android:alpha="0.2"
        android:textColor="@color/carrot_orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>