<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="30dp"
    app:contentPadding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAngelUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivMapMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/marker_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/gable_green"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/place_name"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@id/ivMapMarker"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gable_green"
            app:layout_constraintTop_toBottomOf="@id/tvPlaceName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPlaceDensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tvSlash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="/"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@id/tvPlaceDensity"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/tvPlaceTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="@color/gable_green"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@id/tvSlash"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPlaceDensity"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/car_density_green"
            app:layout_constraintBottom_toBottomOf="@id/tvPlaceDensity"
            app:layout_constraintStart_toEndOf="@id/tvPlaceTotal"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hiddenLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPlaceDensity">

            <TextView
                android:id="@+id/tvAverageDensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/average_density"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAverageDensity"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/car_density_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tvAverageDensity"
                app:layout_constraintStart_toEndOf="@id/tvAverageDensity"
                />

            <TextView
                android:id="@+id/tvPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/place_point"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAverageDensity" />

            <TextView
                android:id="@+id/tvPlacePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="21sp"
                app:layout_constraintStart_toEndOf="@id/tvPoint"
                app:layout_constraintTop_toBottomOf="@id/tvAverageDensity" />

            <TextView
                android:id="@+id/tvDateAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:fontFamily="@font/quicksand_medium"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPoint"/>

            <ImageView
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPoint"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

